--- a/exposicion/css/navbar.css
+++ b/exposicion/css/navbar.css
@@ -1,11 +1,11 @@
-.navegador{
+header{
     display: grid;
     margin:0;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
 }
-.iconm{
-    display: none;
-    margin: 0;
-}
+
 ul>div>label{
     display: none;
 }
