--- a/exposicion/css/cssfurps.css
+++ b/exposicion/css/cssfurps.css
@@ -2,7 +2,7 @@
     align-content: center;
     margin:0 30px 0 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+    padding-top: 40px;
 }
 
 .contenido{
