--- a/exposicion/css/navbar.css
+++ b/exposicion/css/navbar.css
@@ -1,9 +1,10 @@
 header{
     display: grid;
     margin:0;
-    width: 100%;
+    width: 50%;
     position: fixed;
     z-index: 100;
+    
 }
 
 ul>div>label{
@@ -23,10 +24,11 @@ a{
     text-align: left;
     background-color:#BFBFBF;   
     border-left: gray;   
-    margin-left: 5px;
+    margin-left: 10px;
     border-radius: 5px;
     color: honeydew;
     height: 35px;
+    
     
 }
 
@@ -49,6 +51,9 @@ ol>p{
 
 @media all and (max-width: 900px) and (min-width: 200px) {
    
+    header{
+        width: 100%;
+    }
    .iconm{
       
     width: 40px;
