--- a/exposicion/css/cssfurps.css
+++ b/exposicion/css/cssfurps.css
@@ -2,16 +2,16 @@
     align-content: center;
     margin:0 30px 0 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding-top: 40px;
+    padding-top: 60px;
 }
 
 .contenido{
-    grid-template-areas: "header "
-                         "descrip"
-                         "imagen";
+    grid-template-areas: "descrip descrip descrip"
+                         "imagen parrafos parrafos"
+                         ;
     display: grid;
 }
-header
+h2
 {
     grid-area: header;
     display:block;
@@ -24,15 +24,15 @@ header
 
 #imagen{
     grid-area: imagen;
-   
+}
+.parrafos{
+    grid-area: parrafos;
 }
 
 img{
     margin:auto;
     display: block;
-    }
-
-
-.parrafos{
-    display: none;
+    width: 350px;
 }
+
+
