--- a/exposicion/css/Smccall.css
+++ b/exposicion/css/Smccall.css
@@ -1,5 +1,66 @@
 *
 {
-margin: 0;
-padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
+
+main
+{
+    text-align: center;
+    padding-top: 10px;
+    
+}
+
+.lista
+{
+    text-align: left;
+}
+
+img
+{
+    width: 700px;
+    border: 3px solid #000000;
+}
+
+.parrafo
+{
+    text-align: left;
+}
+
+.contenedor>
+{
+    text-align: left;
+    padding: 10px;
+}
+
+.lado
+{
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.left
+{
+    text-align: left;
+}
+
+.sec
+{
+    text-align: center;
+}
+
+video
+{
+    width: 650px;
+}
+
+
+footer
+{
+    text-align: center;
+}
+
+
+
+
+
