--- a/exposicion/css/cssfurps.css
+++ b/exposicion/css/cssfurps.css
@@ -1,7 +1,9 @@
+*{
+    font-family: 'Open Sans', sans-serif;
+}
 .contenedor{
     align-content: center;
     margin:0 30px 0 30px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding-top: 60px;
 }
 
