--- a/exposicion/css/iso250.css
+++ b/exposicion/css/iso250.css
@@ -14,6 +14,7 @@
     max-width: 1000px;
     margin: auto;
     overflow: hidden;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
  .titulo{
