--- a/exposicion/css/cssfurps.css
+++ b/exposicion/css/cssfurps.css
@@ -8,7 +8,7 @@
 .contenido{
     grid-template-areas: "descrip descrip descrip"
                          "imagen parrafos parrafos"
-                         ;
+                         "video video video";
     display: grid;
 }
 h2
@@ -27,6 +27,11 @@ h2
 }
 .parrafos{
     grid-area: parrafos;
+}
+
+.video{
+    grid-area: video;
+    display: block;
 }
 
 img{
