--- a/exposicion/css/base.css
+++ b/exposicion/css/base.css
@@ -2,9 +2,12 @@
   
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
-    background-color: #b2bec3;
+  
 }
 
+body{
+    background-color: #b2bec3;
+}
 .contenedor{
     padding-top: 50px;
     
