--- a/exposicion/css/navbar.css
+++ b/exposicion/css/navbar.css
@@ -1,8 +1,7 @@
 header{
     display: grid;
     margin:0;
-    width: 50%;
-   
+    width: 50%;   
     z-index: 100;
     
 
@@ -19,11 +18,11 @@ ul>div>label{
 
 a{
     text-decoration: none;
-    
+   
 }
 .nav-item{
     text-align: left;
-    background-color:#BFBFBF;   
+    background-color:#684de4;   
     border-left: gray;   
     margin-left: 10px;
     border-radius: 5px;
@@ -31,9 +30,12 @@ a{
     height: 35px;
 }
 
+
 ol>p{
     margin-top: 10px;
     color:black;
+ 
+   
 }
 
 .nav-item:hover{
